# telenotify

./: .gitignore  Cargo.toml  __myconfig.toml  totify_bot_data.toml
src/: lib.rs  main.rs  statics.rs  types.rs
src/slurm_bot/: bot.rs  storage.rs
