[package]
name = "telenotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
config-file = "0.2.3"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0"
teloxide = "0.8.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
anyhow = "1.0"

